Version 0.3.0+dev
- test also on php master on Travis CI

Version 0.3.0
- raised phpstan's level to 7
- added basic files for testing
- renamed .gitattributes (to keep it and listed files in releases)

Version 0.2.0
- use phing for testing in Travis CI
- added keywords and autoloading for Composer

Version 0.1.0
- use image nexendrie/php in GitLab CI and phing for testing (in GitLab CI)
- use authoritative classmap with Composer
- added generating and deploying documentation for GitLab CI

Version 0.0.2
- added .gitattributes, CONTRIBUTING.md and CHANGELOG

Version 0.0.1
- first version