@@ -1,4 +1,0 @@
-# for php-coveralls
-service_name: travis-ci
-coverage_clover: coverage.xml
-json_path: coverage.json
